--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -2,7 +2,10 @@ footer {
 	background-color: white;
 	height: 60px;
 	width: 100%;
-	border-top: 1px #cccccc;
+	border-top: 1px solid #cccccc;
 	text-align: center;
 	bottom: 0;
+	position: fixed;
+	line-height: 30px;
+
 }
